--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,18 @@
 
   /* Fonts */
   --fs-logo: clamp(2rem, 1.8696rem + 0.6522vw, 2.375rem);
-  --fs-base: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
+  /* --fs-base: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
+   */
+  --fs-base: clamp(1rem, 0.9565rem + 0.2174vw, 1.125rem);
   --fs-small: clamp(0.8125rem, 0.7908rem + 0.1087vw, 0.875rem);
 
   --fw-bold: 700;
+  --fw-semi-bold: 600;
   --fw-regular: 400;
 }
 
 body {
-  @apply relative font-mosk text-fs-base text-color-text-light overflow-x-hidden before:content-[''] before:absolute before:top-0 before:left-0 before:-z-10 before:bg-hero-img before:bg-no-repeat before:bg-cover before:w-full before:h-[360px] 
-  ;
+  @apply relative font-mosk text-fs-base text-color-text-light overflow-x-hidden before:content-[''] before:absolute before:top-0 before:left-0 before:-z-10 before:bg-hero-img before:bg-no-repeat before:bg-cover before:w-full before:h-[360px];
 }
 
 @layer base {
@@ -46,10 +48,64 @@ body {
   @font-face {
     font-family: "Mosk";
     font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url(./assets/fonts/mosk-semi-bold.woff2) format("woff2"),
+      url(./assets/fonts/mosk-semi-bold.woff) format("woff"),
+      url(./assets/fonts/mosk-semi-bold.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: "Mosk";
+    font-style: normal;
     font-weight: 700;
     font-display: swap;
     src: url(./assets/fonts/mosk-bold.woff2) format("woff2"),
       url(./assets/fonts/mosk-bold.woff) format("woff"),
       url(./assets/fonts/mosk-bold.ttf) format("truetype");
   }
+}
+
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+
+  display: grid;
+  place-content: center;
+
+  font: inherit;
+  color: currentColor;
+
+  width: 1.5rem;
+  height: 1.5rem;
+
+  background-color: var(--color-secondary-light);
+  border: 0.15em solid currentColor;
+  border-radius: 0;
+
+  transform: translateY(-0.075em);
+
+  cursor: pointer;
+
+  padding: 0.5rem;
+  margin: 0;
+}
+
+input[type="checkbox"]:focus-visible {
+  outline: max(2px, 0.15em) solid var(--color-primary-light);
+  outline-offset: max(2px, 0.15em);
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  transform: scale(0);
+  transition: 150ms transform ease-in-out;
+  box-shadow: inset 5rem 5rem var(--color-primary-light);
+  background-color: CanvasText;
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
 }
