style: update the style

--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@
   --color-text-light: hsl(0, 0%, 0%);
 
   /* Dark Mode Colors */
-  /* --color-primary-dark: hsl(189, 94%, 43%);
+  --color-primary-dark: hsl(189, 94%, 43%);
   --color-secondary-dark: hsl(219, 31%, 18%);
   --color-body-background-dark: hsl(221, 50%, 11%);
   --color-elements-dark: hsl(0, 0%, 100%);
-  --color-text-dark: hsl(0, 0%, 100%); */
+  --color-text-dark: hsl(0, 0%, 100%);
 
   /* Fonts */
   --fs-logo: clamp(2rem, 1.8696rem + 0.6522vw, 2.375rem);
@@ -31,7 +31,8 @@
 }
 
 body {
-  @apply relative font-mosk text-fs-base text-color-text-light overflow-x-hidden before:content-[''] before:absolute before:top-0 before:left-0 before:-z-10 before:bg-hero-img before:bg-no-repeat before:bg-cover before:w-full before:h-[360px];
+  @apply relative font-mosk bg-color-body-background-light dark:bg-color-body-background-dark text-fs-base text-color-text-light dark:text-color-text-dark overflow-x-hidden before:content-[''] before:absolute before:top-0 before:left-0 before:-z-10 before:bg-hero-img before:bg-no-repeat before:bg-cover before:w-full before:h-[360px];
+  transition: background-color 500ms ease, color 500ms ease;
 }
 
 @layer base {
@@ -91,6 +92,10 @@ input[type="checkbox"] {
   margin: 0;
 }
 
+.dark input[type="checkbox"] {
+  background-color: var(--color-secondary-dark);
+}
+
 input[type="checkbox"]:focus-visible {
   outline: max(2px, 0.15em) solid var(--color-primary-light);
   outline-offset: max(2px, 0.15em);
@@ -98,12 +103,18 @@ input[type="checkbox"]:focus-visible {
 
 input[type="checkbox"]::before {
   content: "";
+
   width: 1rem;
   height: 1rem;
-  transform: scale(0);
-  transition: 150ms transform ease-in-out;
-  box-shadow: inset 5rem 5rem var(--color-primary-light);
+
   background-color: CanvasText;
+  box-shadow: inset 5rem 5rem var(--color-primary-light);
+
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform-origin: bottom left;
+  transform: scale(0);
+
+  transition: 150ms transform ease-in-out;
 }
 
 input[type="checkbox"]:checked::before {
