--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,22 @@ body {
   }
 }
 
+.visually-hidden {
+  display: inline-block;
+  position: absolute;
+
+  height: 1px;
+  width: 1px;
+
+  border: 0;
+  clip: rect(0 0 0 0);
+
+  margin: -1px;
+  padding: 0;
+
+  overflow: hidden;
+}
+
 input[type="checkbox"] {
   -webkit-appearance: none;
   appearance: none;
