--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 :root {
   /* Colors */
+  --color-errors: hsl(0, 72%, 51%);
+
   /* Light Mode Colors */
   --color-primary-light: #07b6d5;
   --color-secondary-light: hsl(228, 100%, 98%);
